[tool.poetry]
name = "lifeinuk"
version = "0.1.0"
description = ""
authors = ["t"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.23.0"
tqdm = "^4.46.0"
beautifulsoup4 = "^4.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
